--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ agp = "8.6.0"
 dagger = "2.51.1"
 daggerCompiler = "2.46"
 glide = "4.16.0"
-kotlin = "1.9.0"
+kotlin = "1.9.22"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -15,7 +15,7 @@ material = "1.12.0"
 activity = "1.9.2"
 constraintlayout = "2.1.4"
 navigationSafeArgsGradlePlugin = "2.8.3"
-realmAndroidLibrary = "10.15.1"
+realmAndroidLibrary = "10.19.0"
 retrofit = "2.9.0"
 
 [libraries]
@@ -40,6 +40,7 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "loggingInterceptor" }
 realm-android-library = { module = "io.realm:realm-android-library", version.ref = "realmAndroidLibrary" }
+realm-annotations-processor = { module = "io.realm:realm-annotations-processor", version.ref = "realmAndroidLibrary" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 
 [plugins]
